src/main/java/com/example/stream/spring/courses/reactive/example/model/error/StudentError.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface StudentError extends Error permits StudentNotFound {
}
